<resources>
    <string name="app_name">myrecetario</string>
    <string name="User">Ingrese su usuario</string>
    <string name="Password">Ingresa tu contraseña</string>
    <string name="Logo">Recetario para la app</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <!-- Creation User -->
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="post">Cargo</string>
    <string name="oldYear">Edad</string>
    <string name="numberCellPhone">Numero Telefonico</string>
    <string name="password">Contraseña</string>
    <string name="Create">Create</string>
    <string name="comeBack">Volver</string>
    <string name="title_activity_create_receta">CreateReceta</string>
    <!--Creation Receta-->
    <string name="nombreReceta">Nombre de la receta</string>
    <string name="verTodo">Ver todo</string>
    <string name="descripcion">Descripcion</string>
    <string name="PesoCantidadUnidades">Peso y cantidad de unidades</string>
    <string name="descripcionMoldeo">Descripcion moldeo</string>
    <string name="preparacion">Preparacion</string>
    <string name="temperatura">Temperatura</string>
    <string name="porcionado">Porcionado</string>
    <string name="almacenamiento">Almacenamiento</string>

    <!-- Crea tu Receta -->
    <string name="creaTuMasa">Nombre de la masa</string>
    <string name="creaTuGalleta">Nombre de la Galleta</string>
    <string name="creaTuPastel">Nombre del pastel</string>
    <string name="creaTuBatido">Nombre de la torta</string>
    <string name="tipoDeMasa">Tipo de masa</string>
    <string name="nota">Nota : RECUERDE PESAR EN ESTE ORDEN</string>
    <string name="cantidadAgua">Cantidad agua</string>
    <string name="cantidadLevadura">Cantidad gramos levadura</string>
    <string name="cantidadPrefermento">Cantidad gramos prefermento</string>
    <string name="cantidadEsencia">Cantidad tapaditas de esencia</string>
    <string name="cantidadHuevos">Cantidad huevos</string>
    <string name="cantidadAzucar">Cantidad en gramos de azucar</string>
    <string name="cantidadSal">Cantidad gramos de sal</string>
    <string name="cantidadMargarina">Cantidad gramos margarina</string>
    <string name="cantidadHarina">Cantidad gramos harina</string>
    <string name="cantidadFeceulaDeMaiz">Cantidad gramos Fecula de maiz</string>
    <string name="cantidadDePolvoParaHornear">Cantidad gramos polvo para hornear</string>
    <string name="cantidadDeGramosDeChocolate">Cantidad gramos de chocolate</string>
    <string name="cantidadDeLimones">Cantidad de limones</string>
    <string name="cantidadChocolate">Cantidad en Gramos de chocolate</string>
    <string name="cantidadVitina">Cantidad en gramos de vitina</string>
    <string name="cantidadLeche">Cantidad en gramos de leche</string>
    <string name="ralladuraLimon">Cantidad de limones rayados</string>
    <string name="cantidadZanahora">Cantidad en gramos de zanahoria </string>

    <!--welcome sesion -->

    <string name="search">Busca tu receta</string>
    <string name="Info">Informacion no encontrada</string>
    <string name="amount">Elija la cantidad que preparara</string>
    <string name="title_activity_creation_receta_pasteles">CreationRecetaPasteles</string>
    <string name="delete">Eliminar</string>
    <!-- Lista de tareas-->

    <string name="tareas">Lista de tareas</string>
    <string name="selectList">Seleccionar lista</string>
    <string name="nuevaTarea">Nueva tarea</string>
    <string name="fecha">Fecha sin fijar</string>
    <string name="fechaLimite">Fecha limite</string>
    
    <!-- Todas las recetas -->
    <string name="allRecipes">Todas las recetas</string>
</resources>