<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoPrincipal"
    tools:context=".MainActivity">

    <!-- Botón de imagen con descripción accesible -->

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="99dp"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/iconopan" />

    <!-- Campo de texto para el Nombre -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="294dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButton3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCreationUserUser"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:inputType="text"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de texto para el Apellido -->

    <!-- Spinner para elegir el cargo (Panadero, Pastelero, etc.) -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginUser"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLastNameUser"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="monospace"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:inputType="text"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="294dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:hint="@string/post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilLoginUser">

        <Spinner
            android:id="@+id/spinnerPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/post" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de texto para la Edad -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="294dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:hint="@string/oldYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOldYear"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:inputType="text"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de texto para el Número de Teléfono -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="294dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:hint="@string/numberCellPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNumberPhone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:imeOptions="actionNext"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de texto para la Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="294dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCreationPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:imeOptions="actionDone" /> <!-- Termina aquí -->
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón para regresar -->
    <Button
        android:id="@+id/btnComeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#D9AC6C"
        android:text="@string/comeBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Botón para crear usuario -->
    <Button
        android:id="@+id/btnCreationUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#D9AC6C"
        android:text="@string/Create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
