<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreationReceta"
    android:background="@color/fondoPrincipal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttons"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Crea tu receta"
            android:textSize="50sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/creaTuGalleta">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationNombreGalleta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>





            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/descripcion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationRecetaDescripcionGalleta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/cantidadHuevos">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationRecetaPreparacionHuevosGalletas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/cantidadEsencia">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationRecetaPreparacionEsenciaGalletas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/cantidadAzucar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationRecetaPreparacionAzucarGalletas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:fontFamily="monospace"
                    android:maxLines="10"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/cantidadMargarina">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationRecetaPreparacionMargarinaGalleta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/cantidadHarina">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationRecetaPreparacionHarinaGalletas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:imeOptions="actionNext"
                    android:inputType="number"                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/cantidadFeceulaDeMaiz">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationRecetaPreparacionFecula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/cantidadDePolvoParaHornear">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationRecetaPreparacionPolvoHornear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="monospace"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/cantidadDeLimones">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationRecetaPreparacionLimones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="monospace"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/cantidadChocolate">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationRecetaPreparacionChocolate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="monospace"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/preparacion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationRecetaPreparacionGalletas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/temperatura">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationRecetaTemperaturaGalletas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/porcionado">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationRecetaPorcionadoGalleta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="monospace"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/almacenamiento">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreationRecetaAlmacenamientoGalletas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCreationRecetaGalletas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/buttons"
                android:text="@string/Create"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
