<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoPrincipal"
    tools:context=".MainActivity">

    <!-- Botón de imagen con descripción accesible -->
    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="99dp"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/iconopan" />

    <!-- Campo de texto para el usuario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginUser"
        android:layout_width="294dp"
        android:layout_height="70dp"
        android:layout_marginTop="172dp"
        android:hint="@string/User"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginUser"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="monospace"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de texto para la contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginPassword"
        android:layout_width="294dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:hint="@string/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilLoginUser">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="monospace"
            android:imeOptions="actionDone"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón de login -->
    <Button
        android:id="@+id/buttonPrueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="218dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/buttons"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilLoginPassword"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
